module login: styled settings

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -236,9 +236,10 @@ login.https-link=<a href\="{1}">Klicken Sie hier</a> f\u00FCr eine sichere Anmel
 login.login-blocked=Der Login f\u00FCr {1} wurde aufgrund wiederholt fehlgeschlagener Loginversuche aus Sicherheitsgr\u00FCnden gesperrt. Bitte wenden Sie sich an den Administrator der Website.
 login.login-error=Fehler beim Login. Bitte pr\u00FCfen Sie Benutzername und Kennwort
 login.settings.dbkey=Login an Datenbank (optional)
-login.settings.if-not-logged-in=F\u00FCr anonyme Benutzer\:
+login.settings.if-not-logged-in=F\u00FCr anonyme Benutzer
 login.settings.if-not-logged-in.options=Zeige Login Formular|login,Zeige gar nichts|nothing
-login.settings.not-logged-in-message=Text, wenn Benutzer anonym ist
+login.settings.not-logged-in-message=Hinweistext
+login.settings.logginmessage.placeholder=Kein Hinweis
 login.settings.use-https=F\u00FCr Anmeldung https verwenden
 
 modal.layout=Layout
