--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -230,7 +230,8 @@ login.login-error=Login error. Please check user name and password
 login.settings.dbkey=Dbkey of database to Login (optional)
 login.settings.if-not-logged-in=If user is anonymous
 login.settings.if-not-logged-in.options=Show login form|login,Show nothing|nothing
-login.settings.not-logged-in-message=Message if user is anonymous
+login.settings.not-logged-in-message=Message
+login.settings.logginmessage.placeholder=No Message
 login.settings.use-https=Use HTTPS for login
 
 modal.layout=Layout
