$clean: hide cm.add-your-modules-please text

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -33,7 +33,7 @@ attachment.pages={1} Seiten
 
 child-nav.settings.parent.options=Dieses Dokument|this,Parent-Dokument|parent,Ausgew\u00E4hltes Dokument|any
 
-cm.add-your-modules-please=<b>Inhaltsmodule '{1}'</b><br>Klicken Sie hier oder verwenden "Inhaltsmodule" im rechten Info-Panel, um neue Module an dieser Stelle einzuf\u00FCgen.
+cm.add-your-modules-please=<b>Inhaltsmodule '{1}'</b><br>Klicken Sie hier, um neue Module an dieser Stelle einzuf\u00FCgen.
 cm.click-to-add-modules=Klicken, um Module einzuf\u00FCgen
 cm.click-to-edit-modules=Klicken, um Module zu bearbeiten
 cm.edit-modules=Module bearbeiten
