#00005210: Added possibility to configure "default authoring App"

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serveroptions/various.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serveroptions/various.properties
@@ -1,6 +1,9 @@
 options.title=Other settings
 options.description=Setting that don't fit in other categories
 
+option.DefaultAuthoringApp.title=Default Content Manager App for Authoring
+option.DefaultAuthoringApp.description=Specifies what App is used when URL /contentmanager is called.
+
 option.Encoding.Output.title=Default output encoding
 option.Encoding.Output.description=Specifies the default text encoding that WGA uses to put out any text based resources like WebTML pages, CSS stylesheets and javascripts
 
