#00005265: AFW.content().attachment().getThumbnailURL() use binry.png as image if mimetype is onknown

--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -25,6 +25,12 @@ filetype.others=Andere
 filetype.pdf-docs=PDF Dokumente
 filetype.videos=Videos
 
+filetype.single.images=Bild
+filetype.single.office-docs=Office Dokument
+filetype.single.pdf-docs=PDF Dokument
+filetype.single.videos=Video
+filetype.single.others=Binärdatei
+
 content-properties.version=Version
 
 none=Kein
