#00005266: Renamed file category "Videos" to "Audio/Videos" and added audio files to this category

--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -23,12 +23,12 @@ filetype.images=Bilder
 filetype.office-docs=Office Dokumente
 filetype.others=Andere
 filetype.pdf-docs=PDF Dokumente
-filetype.videos=Videos
+filetype.videos=Audio / Videos
 
 filetype.single.images=Bild
 filetype.single.office-docs=Office Dokument
 filetype.single.pdf-docs=PDF Dokument
-filetype.single.videos=Video
+filetype.single.videos=Audio / Video
 filetype.single.others=Binärdatei
 
 content-properties.version=Version
