--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -639,7 +639,7 @@ filetype.images=Bilder
 filetype.office-docs=Office Dokumente
 filetype.others=Andere
 filetype.pdf-docs=PDF Dokumente
-filetype.videos=Videos
+filetype.videos=Audio / Videos
 
 format.date.long=EEEE dd. MMMM yyyy
 format.date.long-time=HH\:mm\:ss
