--- a/OpenWGA/plugins/cm/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_en/general.properties
@@ -639,7 +639,7 @@ filetype.images=Images
 filetype.office-docs=Office Documents
 filetype.others=Others
 filetype.pdf-docs=PDF Documents
-filetype.videos=Videos
+filetype.videos=Audio / Videos
 
 format.date.long=EEEE, MMMM dd, yyyy
 format.date.long-time=hh\:mm\:ss a
