--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -221,7 +221,7 @@ html5media.webm-video-file=WebM Video (Firefox/Opera)
 image.click=Aktion bei Klick
 image.img-mouse-over=Mouse-Over Bild
 image.settings.click-options=keine|nothing,Lightbox|zoom,Link|link,Datei \u00F6ffnen|open
-image.settings.database=Datenbank
+image.settings.database=App
 image.settings.datasource=Datenquelle
 image.settings.descriptions.options=Titel|title,Copyright|copyright,Beschreibung|description,Eigener Untertitel|subtitle
 image.settings.labeling=Beschriftung
