--- a/OpenWGA/plugins/afw/.settings/org.eclipse.core.resources.prefs
+++ b/OpenWGA/plugins/afw/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+encoding//design/scripts=UTF-8
+encoding//design/tml=UTF-8
 encoding//designs/plugin/scripts=UTF-8
 encoding//designs/plugin/tml=UTF-8
