--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -1,10 +1,11 @@
-login.database-not-found=Datenbank '{1}' konnte nicht ge\u00F6ffnet werden.
+login.database-not-found=App '{1}' konnte nicht ge\u00F6ffnet werden.
 login.init-db-design.needs-init-by-designer=Diese Contentstore muss zun\u00E4chst von einem Benutzer mit Manager-Rechten initialisiert werden.<br>Bitte melden Sie sich als Benutzer mit Manager-Rechten an ...
 login.login-blocked=Der Anmeldename '{1}' wurde aufgrund wiederholter erfolgloser Anmeldeversuche gesperrt. Bitte wenden Sie sich an Ihren Administrator. 
 login.login-error=Anmeldefehler. Bitte pr\u00FCfen Sie Benutzername und Kennwort.
 login.please-login-as-author=Bitte melden sie sich als Autor an
-login.user-is-no-author=Benutzer '{1}' ist kein Autor der Datenbank '{2}'.
-login.user-is-no-designer=F\u00FCr diese Datenbank ben\u00F6tigen Sie mindestens Designer-Rechte.
+login.user-is-no-author=Benutzer '{1}' ist kein Autor der App '{2}'.
+login.user-is-no-designer=F\u00FCr diese App ben\u00F6tigen Sie mindestens Designer-Rechte.
+login.user-no-access=Benutzer '{1}' hat keine Leseberechtigung in App '{2}'.
 
 content-properties.title=Titel
 content-properties.created=Erstellt
