--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -46,7 +46,7 @@ no-content-found.title=Die angeforderte Seite wurde nicht gefunden
 
 no-content.message=F\u00FCr die Seite '{1}' sind keine nichtarchivierten Inhalte in der Sprache '{2}' vorhanden.
 no-content.new-version-from-this=Neue Sprachversion aus dieser Version erstellen
-no-content.no-reader-message=Es liegt ein Inhalt in der Sprache <b>{1}</b> vor, sie besitzen jedoch keine Leseberechtigung f\u00FCr diesen Inhalt.
+no-content.no-reader-message=Es liegt ein Inhalt in der Sprache <b>{1}</b> vor, Sie besitzen jedoch keine Leseberechtigung f\u00FCr diesen Inhalt.
 no-content.no-reader-title=Keine Leseberechtigung
 no-content.other-versions=Andere Versionen
 no-content.title=Keine Inhaltsseite vorhanden
