--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -790,6 +790,8 @@ reason.you-are-no-author=Das Dokument ist in nicht von Ihnen erstellt. Sie ben\u
 
 reason.pagerightsfilter-denies-edit=PageRightsFilter verbietet das Bearbeiten des Inhalts (in dieser Sprache)
 
+reason.protected-relation-denies-edit=Eine geschütze Relation auf {1} verbietet das Löschen.
+
 rtf.alt=Alt
 rtf.border-width=Rahmenst\u00E4rke
 rtf.change-or-create=Erstellen/\u00C4ndern
