--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -84,6 +84,8 @@ reason.you-are-no-author=Das Dokument ist in nicht von Ihnen erstellt. Sie ben\u
 
 reason.pagerightsfilter-denies-edit=PageRightsFilter verbietet das Bearbeiten des Inhalts (in dieser Sprache)
 
+reason.protected-relation-denies-edit=Eine geschütze Relation auf {1} verbietet das Löschen.
+
 admin.workflows=Workflows
 admin.pagetypes=Seitentypen
 admin.areas=Bereiche
