content-box: Changed label in settings from "style" to "layout"

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -92,8 +92,8 @@ content-box.settings.background-image=Hintergrundbild
 content-box.settings.fixed_height=Feste H\u00F6he
 content-box.settings.height=H\u00F6he
 content-box.settings.margin=Rand
-content-box.settings.style=Stil
-content-box.settings.style.options=Default|,Rahmen|border,Farbe|color
+content-box.settings.layout=Layout
+content-box.settings.layout.options=Default|,Rahmen|border,Farbe|color
 content-box.settings.title=Titel
 content-box.settings.title-as-link=Titel als Link
 content-box.settings.title-options=Titel anzeigen|show
