--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -391,3 +391,7 @@ vote.votes=Bewertungen
 vote.your-vote=Ihre Bewertung dieser Seite
 
 form.settings.placeholder=Platzhalter
+
+tiles.tiles.module-classes=["Nahtlos|no-margins"]
+tiles.tile.module-classes=["Abstand zum Rand|padding","Rahmen|border"]
+
