--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -388,3 +388,8 @@ vote.votes=Reviews
 vote.your-vote=Your rating for this page
 
 form.settings.placeholder=Placeholder
+
+tiles.tiles.module-classes=["no margins|no-margins"]
+tiles.tile.module-classes=["Padding|padding","Border|border"]
+
+
