#00005387: custom module styles/classes

--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -942,3 +942,5 @@ validation.title=Inhalt mu\u00DF \u00FCberarbeitet werden
 versions.actuel-content-versions=Aktuelle Inhaltsversionen
 versions.other-languages=weitere Sprachen
 versions.title=Versionen
+
+module-style=Stil
