--- a/OpenWGA/plugins/cm/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_en/general.properties
@@ -937,3 +937,5 @@ validation.title=Content is not Valid
 versions.actuel-content-versions=Actual content versions
 versions.other-languages=Other languages
 versions.title=Versions
+
+module-style=Style
