labels de/en for module "tiles"

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -392,6 +392,18 @@ vote.your-vote=Ihre Bewertung dieser Seite
 
 form.settings.placeholder=Platzhalter
 
+tiles.tiles.title=Kacheln
+tiles.tile.title=Kachel
+
 tiles.tiles.module-classes=["Nahtlos|no-margins"]
 tiles.tile.module-classes=["Abstand zum Rand|padding","Rahmen|border"]
+
+
+tiles.tile.setting.width=Relative Breite
+tiles.tile.setting.background-image=Hintergrundbild
+tiles.tile.setting.vertical-align=Vertikale Ausrichting
+
+tiles.tile.setting.vertical-align.options=Oben|start,Unter|end,zentriert|center,Raum zwischen Elementen|space-between,gleichm‰ﬂig verteilt|space-evenly
+
+tiles.tile.setting.link.options=Kein Link|,interner Link|int,externer Link|ext
 
