--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -393,3 +393,12 @@ tiles.tiles.module-classes=["no margins|no-margins"]
 tiles.tile.module-classes=["Padding|padding","Border|border"]
 
 
+tiles.tile.setting.width=Relativ Width
+tiles.tile.setting.background-image=Background Image
+tiles.tile.setting.vertical-align=Vertical Align
+
+tiles.tile.setting.vertical-align.options=top|start,bottom|end,center|center,space between elements|space-between,space evenly|space-evenly
+tiles.tile.setting.link.options=No Link|,internal Link|int,external Link|ext
+
+tiles.tiles.title=Tiles
+tiles.tile.title=Tile
