#00005396: Improved content module "tiles"

--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -368,7 +368,7 @@ tag-cloud.settings.page-for-searchresults=Page for search results
 tiles.tile.setting.background-image=Background Image
 tiles.tile.setting.link.options=No Link|,internal Link|int,external Link|ext
 tiles.tile.setting.vertical-align=Vertical Align
-tiles.tile.setting.vertical-align.options=top|start,bottom|end,center|center,space between elements|space-between,space evenly|space-evenly
+tiles.tile.setting.vertical-align.options=top|flex-start,bottom|flex-end,center|center,space between elements|space-between,space evenly|space-evenly
 tiles.tile.setting.width=Relativ Width
 tiles.tile.title=Tile
 tiles.tiles.title=Tiles
