--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -371,7 +371,7 @@ tag-cloud.settings.page-for-searchresults=Seite f\u00FCr Suchergebnisse
 tiles.tile.setting.background-image=Hintergrundbild
 tiles.tile.setting.link.options=Kein Link|,interner Link|int,externer Link|ext
 tiles.tile.setting.vertical-align=Vertikale Ausrichting
-tiles.tile.setting.vertical-align.options=Oben|start,Unter|end,zentriert|center,Raum zwischen Elementen|space-between,gleichm\u00E4\u00DFig verteilt|space-evenly
+tiles.tile.setting.vertical-align.options=Oben|flex-start,Unten|flex-end,zentriert|center,Raum zwischen Elementen|space-between,gleichm\u00E4\u00DFig verteilt|space-evenly
 tiles.tile.setting.width=Relative Breite
 tiles.tile.title=Kachel
 tiles.tiles.title=Kacheln
