#00005452: Content module "image": added doc selector for internal links

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -230,6 +230,7 @@ image.settings.lightbox-group=Bild-Gruppe
 image.settings.lightbox.show-download.options=Download Link anzeigen|true
 image.settings.source=Dieses Dokument|,Ausgew\u00E4hltes Dokument|container
 image.settings.source.template=Seitenvorlage|,Ausgew\u00E4hltes Dokument|container
+image.setting.link.options=interner Link|int,externer Link|ext
 
 latest-updates.settings.entries=Anzahl Eintr\u00E4ge
 
