#00005488: Module "image": added setting for image (mouse-over) title

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -1,5 +1,5 @@
-#Mon Jun 24 10:08:26 CEST 2019
-align=Ausrichting
+#Wed Jan 22 10:54:28 CET 2020
+align=Ausrichtung
 attachment-one-page=eine Seite
 attachments-from-template-not-supported=Dateianh\u00E4nge aus Vorlagen werden nicht unterst\u00FCtzt
 close=Schlie\u00DFen
@@ -221,16 +221,17 @@ html5media.webm-video-file=WebM Video (Firefox/Opera)
 
 image.click=Aktion bei Klick
 image.img-mouse-over=Mouse-Over Bild
+image.setting.link.options=interner Link|int,externer Link|ext
 image.settings.click-options=keine|nothing,Lightbox|zoom,Link|link,Datei \u00F6ffnen|open
 image.settings.database=App
 image.settings.datasource=Datenquelle
-image.settings.descriptions.options=Titel|title,Copyright|copyright,Beschreibung|description,Eigener Untertitel|subtitle
+image.settings.descriptions.options=Titel / ALT-Text|title,Copyright|copyright,Beschreibung|description,Eigener Untertitel|subtitle
 image.settings.labeling=Beschriftung
 image.settings.lightbox-group=Bild-Gruppe
 image.settings.lightbox.show-download.options=Download Link anzeigen|true
 image.settings.source=Dieses Dokument|,Ausgew\u00E4hltes Dokument|container
 image.settings.source.template=Seitenvorlage|,Ausgew\u00E4hltes Dokument|container
-image.setting.link.options=interner Link|int,externer Link|ext
+image.settings.title=Optionaler Mouse-Over Titel
 
 latest-updates.settings.entries=Anzahl Eintr\u00E4ge
 
