--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -203,11 +203,11 @@ google-weather.settings.location=Ort
 
 html-fragment.settings.fragment=HTML Fragment
 
-html5media.audio.options=Options
+html5media.audio.options=Optionen
 html5media.audio.options.values=Autoplay|autoplay,Wiederholung|loop,Kontroll-Elemente|controls 
 html5media.autoplay=Autoplay
-html5media.html5-audio=HTML5 Audio
-html5media.html5-video=HTML5 Video
+html5media.html5-audio=Audio
+html5media.html5-video=Video
 html5media.mobile-video-file=MP4 Video Mobile (iPhone)
 html5media.mp3-audio-file=MP3 Audio Datei
 html5media.mp4-video-file=MP4 Video (Safari/IE)
