--- a/OpenWGA/libraries/wga/src/main/java/log4j.properties
+++ b/OpenWGA/libraries/wga/src/main/java/log4j.properties
@@ -7,5 +7,5 @@ log4j.logger.de.nava=warn
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{dd.MM.yyyy HH:mm:ss} %p %m\n
+log4j.appender.stdout.layout=org.apache.log4j.EnhancedPatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{dd.MM.yyyy HH:mm:ss}{CET} %p %m%n
