--- a/OpenWGA/distros/wgaDeb/build.gradle
+++ b/OpenWGA/distros/wgaDeb/build.gradle
@@ -116,10 +116,12 @@ task updateDebRepository(dependsOn: buildDeb) << {
         ant.exec(executable:"/usr/bin/reprepro"){
         	arg(line: "-Vb ${debian_repository} remove ${distro} openwga${openwga_version_major}.${openwga_version_minor}-ce")
         }
+
+        println "add ${distro} openwga${openwga_version_major}.${openwga_version_minor}-ce"
+        ant.exec(executable:"/usr/bin/reprepro"){
+        	arg(line: "-C main -Vb ${debian_repository} includedeb ${distro} ${debFile}")
+        }
         
-        def reprepro_command = "/usr/bin/reprepro -C main -Vb ${debian_repository} includedeb ${distro} ${debFile}"
-        println reprepro_command
-        ant.exec(command:reprepro_command)
     }
 }
 updateDebRepository.onlyIf{
