#00005582: Virtual-Host: added option to redirect to default host and/or to force SSL

--- a/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
+++ b/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
@@ -160,6 +160,8 @@ VirtualHost/allowAdminApps =Allow Admin Applications
 VirtualHost/allowAuthoringApps =Allow Authoring Applications
 VirtualHost/preferedLanguages=Prefered Languages for this Host
 VirtualHost/serverAliases=Aliases for this Host
+VirtualHost/forceDefaultHost=Always redirect to default host
+VirtualHost/forceSSL=Force https/SSL
 
 ProxyConfiguration/enabled = Enabled
 ProxyConfiguration/httpProxy = Http proxy host
