#00005592: CM-Neo: added option to use "page-templates" when creating pages

--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -92,3 +92,5 @@ admin.areas=Bereiche
 admin.languages=Sprachen
 admin.contents=Inhalte
 
+system-area.$templates=Seitenvorlagen ({1})
+system-area.$trash=Papierkorb ({1})
