#00005605: Proxy womodo/openwga startpage

--- a/OpenWGA/server/src/main/webapp/WEB-INF/brand.properties
+++ b/OpenWGA/server/src/main/webapp/WEB-INF/brand.properties
@@ -3,4 +3,4 @@ brand.trademark.sign=\u2122
 product.name=Server
 product.eelicense.name=Enterprise Edition
 product.url=https://openwga.com/
-startpage.url=/plugin-management/homepage:main
+startpage.url=/plugin-management/html/homepage:main.int.html
