#00005609: Improved parent calculation on page deletion in special situations

--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -50,6 +50,8 @@ no-content.no-reader-message=Es liegt ein Inhalt in der Sprache <b>{1}</b> vor, 
 no-content.no-reader-title=Keine Leseberechtigung
 no-content.other-versions=Andere Versionen
 no-content.title=Keine Inhaltsseite vorhanden
+no-content.no-lang.message=F\u00FCr die Seite '{1}' sind keine nichtarchivierten Inhalte vorhanden.
+no-content-found.no-struct.message = Die Seite ist entweder nicht vorhanden oder Sie haben keine Leseberechtigung f\u00FCr diese Seite
 
 format.date=dd.MM.yyyy
 
