--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -1,6 +1,6 @@
 login.database-not-found=App '{1}' konnte nicht ge\u00F6ffnet werden.
 login.init-db-design.needs-init-by-designer=Diese Contentstore muss zun\u00E4chst von einem Benutzer mit Manager-Rechten initialisiert werden.<br>Bitte melden Sie sich als Benutzer mit Manager-Rechten an ...
-login.login-blocked=Der Anmeldename '{1}' wurde aufgrund wiederholter erfolgloser Anmeldeversuche gesperrt. Bitte wenden Sie sich an Ihren Administrator. 
+login.login-blocked=Der Anmeldename '{1}' ist für die nächsten {2} Minuten aufgrund wiederholter erfolgloser Anmeldeversuche gesperrt. 
 login.login-error=Anmeldefehler. Bitte pr\u00FCfen Sie Benutzername und Kennwort.
 login.please-login-as-author=Bitte melden sie sich als Autor an
 login.user-is-no-author=Benutzer '{1}' ist kein Autor der App '{2}'.
