--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -223,14 +223,14 @@ image.click=Aktion bei Klick
 image.img-mouse-over=Mouse-Over Bild
 image.setting.link.options=interner Link|int,externer Link|ext
 image.settings.click-options=keine|nothing,Lightbox|zoom,Link|link,Datei \u00F6ffnen|open
-image.settings.database=App
+image.settings.database=App / Sprache / Dokument
 image.settings.datasource=Datenquelle
 image.settings.descriptions.options=Titel / ALT-Text|title,Copyright|copyright,Beschreibung|description,Eigener Untertitel|subtitle
 image.settings.labeling=Beschriftung
 image.settings.lightbox-group=Bild-Gruppe
 image.settings.lightbox.show-download.options=Download Link anzeigen|true
-image.settings.source=Dieses Dokument|,Ausgew\u00E4hltes Dokument|container
-image.settings.source.template=Seitenvorlage|,Ausgew\u00E4hltes Dokument|container
+image.settings.source=Dieses Dokument|,Beliebiges Dokument|container
+image.settings.source.template=Seitenvorlage|,Beliebiges Dokument|container
 image.settings.title=Optionaler Mouse-Over Titel
 
 latest-updates.settings.entries=Anzahl Eintr\u00E4ge
