--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serviceapis/apis.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serviceapis/apis.properties
@@ -24,3 +24,6 @@ scrset.description=Tool to create a string for the "srcset" attribute of HTML ta
 
 sessionmanager.title=Http Session Manager
 sessionmanager.description=WGA implementation of Http session management
+
+encoding.title=AES encrypted
+encoding.description=AES encrypted encoding
