#00005719: renamed AES to AES128

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serviceapis/apis.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serviceapis/apis.properties
@@ -25,5 +25,5 @@ scrset.description=Tool to create a string for the "srcset" attribute of HTML ta
 sessionmanager.title=Http Session Manager
 sessionmanager.description=WGA implementation of Http session management
 
-encoding.title=AES encrypted
-encoding.description=AES encrypted encoding
+encoding.title=AES128 encrypted
+encoding.description=AES 128 Bits encrypted encoding
