#00005739: Added optional "password-self-service-URL" config to OpenWGA domains

--- a/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
+++ b/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
@@ -75,6 +75,7 @@ Domain/personalisation/enabled = Enabled
 Domain/personalisation/lazyConnecting = Lazy Connect
 Domain/personalisation/dbServer = Database Server for Personalisation Database
 Domain/personalisation/implClassName = Typ of Database
+Domain/pwdSelfserviceURL = URL to password self service
 
 ###
 MailConfiguration/server = Mail Server
