--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serveroptions/various.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serveroptions/various.properties
@@ -20,7 +20,7 @@ option.WebTML.DirectOutput.title=WebTML Enable direct output
 option.WebTML.DirectOutput.description=Controls an optimization that allows WebTML tags to directly write to the output stream. Disable if you have problems with legacy WebTML functionalities. 
 
 option.WebTML.FileUpload.MaxSize.title=WebTML file upload maximum size (MB)
-option.WebTML.FileUpload.MaxSize.description=The maximum size that a file uploaded to the file input control of a WebTML form may have, in megabytes. Larger files are discarded on upload. This is a default setting. It remains possible to adjust the maximum upload file size for individual WebTML forms via attribute "maxuploadsize".
+option.WebTML.FileUpload.MaxSize.description=The maximum size that a file uploaded to the file input control of a WebTML form may have, in megabytes. Larger files are discarded on upload. This is a default setting. It remains possible to adjust the maximum upload file size for individual WebTML forms via attribute "maxuploadsize". Specify "0" to disable uploads. Specify "-1" to allow unlimited uploads.
 
 option.Resources.DefaultDB.title=Default application
 option.Resources.DefaultDB.description=Specify an OpenWGA application to which WGA should redirect requests that do not point to an individual app (i.e. the OpenWGA root url only)
