#00005838: Added option to encrypt mails

--- a/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
+++ b/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
@@ -85,6 +85,7 @@ MailConfiguration/fromName = From Name
 MailConfiguration/fromAddress = From Address
 MailConfiguration/enableAdminNotifications = Admin Notifications Enabled
 MailConfiguration/toAddress = Admin Mail Address
+MailConfiguration/encryption = Encryption
 
 ###
 WGAConfiguration/accessLog/implClassName = Logger Implementation
