--- a/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
+++ b/OpenWGA/plugins/admin/design/files/labels_en/wgaconfig.properties
@@ -85,7 +85,7 @@ MailConfiguration/fromName = From Name
 MailConfiguration/fromAddress = From Address
 MailConfiguration/enableAdminNotifications = Admin Notifications Enabled
 MailConfiguration/toAddress = Admin Mail Address
-MailConfiguration/encryption = Encryption
+MailConfiguration/useSSL = Use SSL/TLS to connect to Server
 
 ###
 WGAConfiguration/accessLog/implClassName = Logger Implementation
