#00005888: trash area now is "trash-cm-neo

--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -95,4 +95,7 @@ admin.languages=Sprachen
 admin.contents=Inhalte
 
 system-area.$templates=Seitenvorlagen ({1})
-system-area.$trash=Papierkorb ({1})
+system-area.$trash=Papierkorb CM-Classico ({1})
+system-area.$trash-cm-neo=Papierkorb CM-Neo ({1})
+system-area.hdb-system=HDB System ({1})
+
