#00005893: Improved message when page may not be deleted.

--- a/OpenWGA/plugins/afw/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/afw/design/files/labels_de/general.properties
@@ -124,11 +124,12 @@ reason.no-more-languages=Es sind bereits Sprachversionen f\u00FCr alle Sprachen 
 reason.no-valid-license=Sie besitzen keine Lizenz.
 reason.pagetype-settings-denies-edit=Die Berechtigungen am Seitentyp '{1}' verbieten die Bearbeitung.
 reason.struct-no-allowed-pagetypes=Es existieren keine Seitentypen, die Sie an dieser Strukturposition verwenden d\u00FCrfen.
-reason.struct-setting-denies-creation=Die Berechtigungen am Strukturdokument '{1}' verbieten das Erstellen neuer Seiten.
-reason.struct-settings-denies-creation=Die Berechtigungen am Strukturdokument '{1}' verbieten das Erstellen von Unterdokumenten.
-reason.struct-settings-denies-edit=Die Berechtigungen am Strukturdokument '{1}' verbieten diese Operation.
+reason.struct-setting-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen neuer Seiten.
+reason.struct-settings-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen von Unterdokumenten.
+reason.struct-settings-denies-edit=Die Berechtigungen der Seite '{1}' verbieten diese Operation.
 reason.you-are-no-author=Das Dokument ist in nicht von Ihnen erstellt. Sie ben\u00F6tigen mindestens EDITOR-Rechte in der Datenbank, um das Dokument bearbeiten zu k\u00F6nnen.
 reason.unknown = Unbekannte Ursache
+reason.page.unknown=Eine der Unterseiten verbietet die Operation
 
 status.a=archiviert
 status.g=<span style\="color\:red">zur Genehmigung</span>
