--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -78,15 +78,17 @@ reason.no-subpages-in-templates=Seitenvorlagen d\u00FCrfen keine Unterseiten bes
 reason.no-valid-license=Sie besitzen keine Lizenz.
 reason.pagetype-settings-denies-edit=Die Berechtigungen am Seitentyp '{1}' verbieten die Bearbeitung.
 reason.struct-no-allowed-pagetypes=Es existieren keine Seitentypen, die Sie an dieser Strukturposition verwenden d\u00FCrfen.
-reason.struct-setting-denies-creation=Die Berechtigungen am Strukturdokument '{1}' verbieten das Erstellen neuer Seiten.
-reason.struct-settings-denies-creation=Die Berechtigungen am Strukturdokument '{1}' verbieten das Erstellen von Unterdokumenten.
-reason.struct-settings-denies-edit=Die Berechtigungen am Strukturdokument '{1}' verbieten die Operation.
+reason.struct-setting-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen neuer Seiten.
+reason.struct-settings-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen von Unterdokumenten.
+reason.struct-settings-denies-edit=Die Berechtigungen der Seite '{1}' verbieten die Operation.
 reason.unknown=Unbekannte Ursache
 reason.you-are-no-author=Das Dokument ist in nicht von Ihnen erstellt. Sie ben\u00F6tigen mindestens EDITOR-Rechte in der Datenbank, um das Dokument bearbeiten zu k\u00F6nnen.
 
 reason.pagerightsfilter-denies-edit=PageRightsFilter verbietet das Bearbeiten des Inhalts (in dieser Sprache)
 
 reason.protected-relation-denies-edit=Eine geschütze Relation auf {1} verbietet das Löschen.
+
+reason.page.unknown=Eine der Unterseiten verbietet die Operation
 
 admin.workflows=Workflows
 admin.pagetypes=Seitentypen
