--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -95,6 +95,7 @@ admin.pagetypes=Seitentypen
 admin.areas=Bereiche
 admin.languages=Sprachen
 admin.contents=Inhalte
+admin.trash=Papierkorb
 
 system-area.$templates=Seitenvorlagen ({1})
 system-area.$trash=Papierkorb CM-Classico ({1})
