--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -363,7 +363,7 @@ design.workflow.delete.dlgcaption=Workflow l\u00F6schen
 design.workflow.delete.dlgcontent=Sind Sie sicher?
 design.workflow.form.approvers=Admingenehmiger
 design.workflow.form.desc=Beschreibung
-design.workflow.form.level.approvers=Genemiger
+design.workflow.form.level.approvers=Genehmiger
 design.workflow.form.level.desc=Beschreibung
 design.workflow.form.level.position=Position
 design.workflow.form.levels=Levels
