#00005923: Simplified poster/thumbnail/preview sizes configuration

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/derivatecreators/manual.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/derivatecreators/manual.properties
@@ -1,2 +1,2 @@
-module.title=Manual derivates
+module.title=Manual Derivates
 module.description=Creates derivates whose data was manually determined by users
