--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/derivatecreators/thumbnail.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/derivatecreators/thumbnail.properties
@@ -1,2 +1,2 @@
-module.title=Image thumbnails
-module.description=Creates thumbnail images for JPEG, PNG and GIF images
+module.title=Image Thumbnails/Poster
+module.description=Creates thumbnail/poster images for JPEG, PNG and GIF images
