#00005932: Mail-Config: unable to set SMTP-Port via predefined options

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/mailoptions/options.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/mailoptions/options.properties
@@ -1,2 +1,2 @@
-option.mail.smpt.port.title=SMTP Port
-option.mail.smpt.port.description=The SMTP server port to connect to. If not specified the standard port (465 for SSL, 25 else) will be used.
+option.mail.smtp.port.title=SMTP Port
+option.mail.smtp.port.description=The SMTP server port to connect to. If not specified the standard port (465 for SSL, 25 else) will be used.
