--- a/OpenWGA/plugins/rest/build.gradle
+++ b/OpenWGA/plugins/rest/build.gradle
@@ -3,11 +3,11 @@ dependencies {
 
 	// JAX-B dependencies for JDK 9+
 	// vielleicht später mal. Momentan können wir Java +9 ohnehin nicht unterstützen.
-    //compile 'javax.xml.bind:jaxb-api:2.3.1'
+    compile 'javax.xml.bind:jaxb-api:2.3.1'
 
     // JAX-B dependencies for JDK 9+
-    compile "jakarta.xml.bind:jakarta.xml.bind-api:4.0.0"
-    compile "org.glassfish.jaxb:jaxb-runtime:4.0.0"
+    //compile "jakarta.xml.bind:jakarta.xml.bind-api:4.0.0"
+    //compile "org.glassfish.jaxb:jaxb-runtime:4.0.0"
     
     compileClasspath project(":wga");
     compileClasspath project(":wgaBuildTools");
