#00005978: Added preinst script to remove existing tomcat bin and lib

--- a/OpenWGA/distros/wgaDeb/build.gradle
+++ b/OpenWGA/distros/wgaDeb/build.gradle
@@ -57,10 +57,10 @@ ospackage {
     configurationFile('/etc/openwga/tomcat/conf/tomcat-users.xml')
     configurationFile('/etc/openwga/tomcat/conf/web.xml')
     
+    preInstall file('debianScripts/preinst')
     postInstall file('debianScripts/postinst')
     preUninstall file('debianScripts/prerm')
     postUninstall file('debianScripts/postrm')
-
     
     from('dist/all/openwga/src/etc') {
         into '/etc'
