#00006023: Updated version compliance to 7.10

--- a/OpenWGA/plugins/afw/.settings/org.eclipse.core.resources.prefs
+++ b/OpenWGA/plugins/afw/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//design/scripts=UTF-8
+encoding//design/scripts/js/labels_de.js=UTF-8
 encoding//design/tml=UTF-8
 encoding//designs/plugin/scripts=UTF-8
 encoding//designs/plugin/tml=UTF-8
