#00006092: Added webp to mime-to-suffix.properties

--- a/OpenWGA/libraries/wgapi/src/main/java/de/innovationgate/webgate/api/mime-to-suffix.properties
+++ b/OpenWGA/libraries/wgapi/src/main/java/de/innovationgate/webgate/api/mime-to-suffix.properties
@@ -96,6 +96,7 @@ image/tiff=tif
 image/x-pcx=pcx
 image/x-tiff=tif
 image/x-windows-bmp=bmp
+image/webp=webp
 message/rfc822=mime
 multipart/x-zip=zip
 text/css=css
