#00006146: Added new panel "access-rights"

--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -69,7 +69,7 @@ reason.doucument-in-workflow-exists=Es existiert bereits ein Dokument im Genehmi
 reason.doucument-pending-exists=Es wartet ein Dokument auf Ver\u00F6ffentlichung.
 reason.language-settings-denies-creation=Die Einstellungen in den Sprachdefinitionen verbieten das erstellen neuer Seiten.
 reason.language-settings-denies-deletion=Die Einstellungen der Spache erlauben das L\u00F6schen nicht.
-reason.language-settings-denies-edit=Die Einstellungen der Spache erlauben das Bearbeiten nicht.
+reason.language-settings-denies-edit=Die Einstellungen einer der Spachen erlauben das Bearbeiten nicht.
 reason.no-author=Sie ben\u00F6tigen mindestens Autorenrechte in der Datenbank. 
 reason.no-creations-in-trash=Sie k\u00F6nnen keine Dokumente im Papierkorb erstellen
 reason.no-edit-in-trash=Dokumente im Papierkorb k\u00F6nnen nicht bearbeitet werden.
