--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -80,7 +80,7 @@ reason.pagetype-settings-denies-edit=Die Berechtigungen am Seitentyp '{1}' verbi
 reason.struct-no-allowed-pagetypes=Es existieren keine Seitentypen, die Sie an dieser Strukturposition verwenden d\u00FCrfen.
 reason.struct-setting-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen neuer Seiten.
 reason.struct-settings-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen von Unterdokumenten.
-reason.struct-settings-denies-edit=Die Berechtigungen der Seite '{1}' ({2}) verbieten die Operation.
+reason.struct-settings-denies-edit=Die Berechtigungen der Seite '{1}' verbieten die Operation.
 reason.unknown=Unbekannte Ursache
 reason.you-are-no-author=Das Dokument ist in nicht von Ihnen erstellt. Sie ben\u00F6tigen mindestens EDITOR-Rechte in der Datenbank, um das Dokument bearbeiten zu k\u00F6nnen.
 
