Google Maps: removed option "weather":

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -190,7 +190,7 @@ google-maps.settings.height=H\u00F6he
 google-maps.settings.latitude=Breitengrad
 google-maps.settings.latlng=L\u00E4ngen-/Breitengrad
 google-maps.settings.layer=Layer
-google-maps.settings.layer-options=Wetter|weather,Verkehrsinfos|traffic,Parkpl\u00E4tze|parking
+google-maps.settings.layer-options=Verkehrsinfos|traffic,Parkpl\u00E4tze|parking
 google-maps.settings.longitude=L\u00E4ngengrad
 google-maps.settings.map-type=Kartentyp
 google-maps.settings.map-type-options=Karte|google.maps.MapTypeId.ROADMAP,Satellit|google.maps.MapTypeId.SATELLITE,Hybrid|google.maps.MapTypeId.HYBRID,Gel\u00E4nde|google.maps.MapTypeId.TERRAIN
