--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -204,7 +204,7 @@ google-weather.settings.location=Ort
 html-fragment.settings.fragment=HTML Fragment
 
 html5media.audio.options=Optionen
-html5media.audio.options.values=Autoplay|autoplay,Wiederholung|loop,Kontroll-Elemente|controls 
+html5media.audio.options.values=Automatisch starten|autoplay,Endlosschleife|loop,Kontroll-Elemente|controls 
 html5media.autoplay=Autoplay
 html5media.html5-audio=Audio
 html5media.html5-video=Video
